--- a/styles.scss
+++ b/styles.scss
@@ -2,3 +2,29 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.mr-16{
+    margin-right: 16px;
+}
+
+.full-width{
+    width: 100%;
+}
+
+.mt-24{
+     margin-top: 24px;
+}
+
+.dialog-container{
+    position: relative;
+
+    mat-progress-bar{
+        position: absolute;
+        left: -24px;
+        right: -24px;
+        top: -24px;
+        width: calc(100% + 48px);
+    }
+
+}
